# chronicle

./: Cargo.toml  chronicle.yaml
.github/workflows/: autotesting.yml  pipeline.yml  release.yml
src/: config.rs  lib.rs  main.rs
src/cli/: extract.rs  list.rs  mod.rs  project.rs  read.rs  session.rs
src/probe/: antigravity.rs  claudecode.rs  mod.rs  opencode.rs  zed.rs
src/store/: mod.rs  schema.rs
