[package]
name = "chronicle"
version = "0.2.2"
edition = "2021"
description = "AI conversation history extraction and observability tool"
authors = ["Stanley Xie"]

[dependencies]
# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Compression (for Zed probe)
zstd = "0.13"

# Async (for future)
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "fs"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
glob = "0.3"
sha2 = "0.10"
hex = "0.4"
walkdir = "2.4"
shellexpand = "3.1"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tempfile = "3.9"
